# MusicAnalytic

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.grafana  Jenkinsfile  README.md  config.yaml  docker-compose.yaml  main.py  pyproject.toml  settings.py  setup-grafana-env.sh
controllers/: __init__.py
controllers/crawling/: base.py  catalog_data.xlsx
controllers/etl/: __init__.py  base.py
controllers/hello/: base_crawl.py
controllers/idx/: base.py  ingest.py  model.py
controllers/insert/: base.py  tb_asesmen.csv
controllers/pusher/: pusher_yt.py
controllers/stockbit/: base.py  model.py
dbml/: erd-medallion-architecture.dbml
deployment/idx/: sc-idx-conf.yaml  sc-idx-dep.yaml
deployment/sidatuk/: sc-sidatuk-conf.yaml  sc-sidatuk-dep.yaml
downloads/: token.json
grafana/dashboards/: dashboards.yml  music-analytics-gold.json  pipeline-monitoring.json
grafana/datasources/: bigquery.yml  postgresql.yml
helpers/: database.py  elastic.py  kafka.py  mongo.py  rabbitmq.py
helpers/input/: __init__.py
helpers/input/driver/: __init__.py  beanstalk.py
helpers/input/driver/factory/: __init__.py
helpers/output/: __init__.py
helpers/output/driver/: __init__.py  beanstalk.py  kafka.py
helpers/output/driver/factory/: __init__.py
metadata/: fast.json  iata.json
raw/: raw_spotify.json  raw_youtube.json
s3/: connection.py  functions.py
