[project]
name = "new-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.13.3",
    "beautifulsoup4==4.12.3",
    "boto3==1.35.78",
    "botocore==1.35.78",
    "dateparser>=1.4.1",
    "gdown>=5.2.1",
    "google-api-python-client>=2.189.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "google-cloud-bigquery>=3.20.0",
    "greenstalk==2.0.2",
    "httpx>=0.28.1",
    "jmespath==1.0.1",
    "kafka-python==2.3.0",
    "loguru==0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pika==1.3.2",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "psycopg2-binary==2.9.11",
    "pymongo==3.12.3",
    "pyquery>=2.0.1",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "requests==2.32.3",
    "ruff>=0.14.14",
    "sqlalchemy==2.0.46",
    "srsly==2.5.1",
    "urllib3==2.2.3",
]
